2000-03-21  Christopher James Lahey  <clahey@helixcode.com>

	* e-table.c: Make rectangles resize properly when receiving the
	"model_changed" signal.

2000-03-20  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-group-container.c, e-table-group-container.h,
	e-table-group-leaf.c, e-table-group.c, e-table-group.h: Updated
	these to use the new ECanvas reflow infrastructure.

	* e-table-item.c, e-table-item.h: Updated these to use the new
	ECanvas reflow infrastructure.  Fixed the bounding box.
	
	* e-table.c, e-table.h: Made the header have no extra space around it.

2000-03-19  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-header.c: Fixed a crashing bug when you close an
	ETable.

2000-03-13  Christopher James Lahey  <clahey@helixcode.com>

	* e-cell-text.c: Fixed a crashing bug when you cancel an edit.

2000-03-12  Christopher James Lahey  <clahey@helixcode.com>

	* e-table.c: Made this use an ECanvas.  Fixed a bug where
	e_table_new_from_spec_file was calling e_table_construct instead
	of e_table_construct_from_spec_file.

	* e-table-item.c, e-table-header-item.c, e-table-column-item.c:
	Switched these to use GTK_TYPE_OBJECT and GTK_VALUE_OBJECT instead
	of GTK_TYPE_POINTER and GTK_TYPE_OBJECT.

	* e-cell-text.c: Got rid of a crashing bug.

	* e-table-text-model.c, e-table-text-model.h: A new object which
	is an e-text-model which uses an e-table-model for its data.

	* Makefile.am: Added e-table-text-model.c and
	e-table-text-model.h.

	* .cvsignore: Added table-example-1 and table-example-2.

2000-03-08  Christopher James Lahey  <clahey@helixcode.com>

	* e-table.c: Changed the destroy function to disconnect from
	signals before unrefing the objects the sinnals are on.  Changed
	the destroy function to match the objects and signal ids properly
	in its disconnect section.
	
	* e-table-item.c, e-table-item.h: Changed this to do follow the
	canvas rules better.

	* e-table-header-item.c, e-table-header-item.h: Made