@@ -105,10 +105,13 @@ e_table_text_model_destroy (GtkObject *object)
 	ETableTextModel *model;
 
 	g_return_if_fail (object != NULL);
-	g_return_if_fail (E_IS_TEXT_MODEL (object));
+	g_return_if_fail (E_IS_TABLE_TEXT_MODEL (object));
 
 	model = E_TABLE_TEXT_MODEL (object);
 
+	g_assert (model->model);
+	g_assert (GTK_IS_OBJECT (model->model));
+	
 	if (model->cell_changed_signal_id)
 		gtk_signal_disconnect(GTK_OBJECT(model->model), 
 				      model->cell_changed_signal_id);
