@@ -1,3 +1,8 @@
+2000-03-22  Matt Loper  <matt@helixcode.com>
+
+	* e-table-text-model.c (e_table_text_model_destroy): Added some
+	assertions.
+
 2000-03-21  Christopher James Lahey  <clahey@helixcode.com>
 
 	* e-table.c: Make rectangles resize properly when receiving the
